SampleApp_25cG_C/SDK/CMMISDK_Api.h

	error_km KMAPI CMMISDK_SetTintForUvAdjust(int32_km inInstrumentNo, const CMMISDK_UvAdjustIndex* inData);
	error_km KMAPI CMMISDK_GetTintForUvAdjust(int32_km inInstrumentNo, CMMISDK_UvAdjustIndex* outData);
	error_km KMAPI CMMISDK_SetIsoBrightnessForUvAdjust(int32_km inInstrumentNo, const CMMISDK_UvAdjustIndex* inData);
	error_km KMAPI CMMISDK_GetIsoBrightnessForUvAdjust(int32_km inInstrumentNo, CMMISDK_UvAdjustIndex* outData);
	error_km KMAPI CMMISDK_SetGanzForUvAdjust(int32_km inInstrumentNo, const CMMISDK_UvAdjustGG* inData);
	error_km KMAPI CMMISDK_GetGanzForUvAdjust(int32_km inInstrumentNo, CMMISDK_UvAdjustGG* outData);
	error_km KMAPI CMMISDK_SetEachProfileForUvAdjust(int32_km inInstrumentNo, CMMISDK_UvAdjustDataType inType, const CMMISDK_Data* inData);
	error_km KMAPI CMMISDK_GetEachProfileForUvAdjust(int32_km inInstrumentNo, CMMISDK_UvAdjustDataType inType, CMMISDK_Data* outData);
	error_km KMAPI CMMISDK_SetEachWiForUvAdjust(int32_km inInstrumentNo, CMMISDK_UvAdjustDataType inType, const CMMISDK_UvAdjustIndex* inData);
	error_km KMAPI CMMISDK_GetEachWiForUvAdjust(int32_km inInstrumentNo, CMMISDK_UvAdjustDataType inType, CMMISDK_UvAdjustIndex* outData);
	error_km KMAPI CMMISDK_SetEachTintForUvAdjust(int32_km inInstrumentNo, CMMISDK_UvAdjustDataType inType, const CMMISDK_UvAdjustIndex* inData);
	error_km KMAPI CMMISDK_GetEachTintForUvAdjust(int32_km inInstrumentNo, CMMISDK_UvAdjustDataType inType, CMMISDK_UvAdjustIndex* outData);
	error_km KMAPI CMMISDK_SetEachIsoBrightnessForUvAdjust(int32_km inInstrumentNo, CMMISDK_UvAdjustDataType inType, const CMMISDK_UvAdjustIndex* inData);
	error_km KMAPI CMMISDK_GetEachIsoBrightnessForUvAdjust(int32_km inInstrumentNo, CMMISDK_UvAdjustDataType inType, CMMISDK_UvAdjustIndex* outData);
	error_km KMAPI CMMISDK_SetEachGanzForUvAdjust(int32_km inInstrumentNo, CMMISDK_UvAdjustDataType inType, const CMMISDK_UvAdjustGG* inData);
	error_km KMAPI CMMISDK_GetEachGanzForUvAdjust(int32_km inInstrumentNo, CMMISDK_UvAdjustDataType inType, CMMISDK_UvAdjustGG* outData);
	error_km KMAPI CMMISDK_SetDataForUvAdjust(int32_km inInstrumentNo, CMMISDK_UvAdjustDataType inType, int32_km inNum, const CMMISDK_Data* inFull, const CMMISDK_Data* inCut);
	error_km KMAPI CMMISDK_GetDataForUvAdjust(int32_km inInstrumentNo, CMMISDK_UvAdjustDataType inType, int32_km inNum, CMMISDK_Data* outFull, CMMISDK_Data* outCut);
	error_km KMAPI CMMISDK_PerformUvAdjust(int32_km inInstrumentNo, CMMISDK_CondUvAdjust inCond);
	error_km KMAPI CMMISDK_PerformUvAdjustUsingData(int32_km inInstrumentNo, CMMISDK_CondUvAdjust inCond);
	error_km KMAPI CMMISDK_ClearCoefForUvAdjust(int32_km inInstrumentNo);
	error_km KMAPI CMMISDK_SetCoefForUvAdjust(int32_km inInstrumentNo, CMMISDK_MeasArea inArea, CMMISDK_UvAdjustDataType inType, CMMISDK_CondUvAdjust inCond, const CMMISDK_UvAdjustCoef* inCoef);
	error_km KMAPI CMMISDK_GetCoefForUvAdjust(int32_km inInstrumentNo, CMMISDK_MeasArea inArea, CMMISDK_UvAdjustDataType inType, CMMISDK_CondUvAdjust* outCond, CMMISDK_UvAdjustCoef* outCoef);
	error_km KMAPI CMMISDK_SetMeasurementArea(int32_km inInstrumentNo, CMMISDK_MeasArea inArea);
	error_km KMAPI CMMISDK_GetMeasurementArea(int32_km inInstrumentNo, CMMISDK_MeasArea* outArea);
	error_km KMAPI CMMISDK_SetMeasurementType(int32_km inInstrumentNo, CMMISDK_MeasType inType);
	error_km KMAPI CMMISDK_GetMeasurementType(int32_km inInstrumentNo, CMMISDK_MeasType* outType);
	error_km KMAPI CMMISDK_SetMeasurementAngle(int32_km inInstrumentNo, CMMISDK_MeasAngle inAngle);
	error_km KMAPI CMMISDK_GetMeasurementAngle(int32_km inInstrumentNo, CMMISDK_MeasAngle* outAngle);
	error_km KMAPI CMMISDK_SetTiltDetection(int32_km inInstrumentNo, CMMISDK_OnOff inDetection);
	error_km KMAPI CMMISDK_GetTiltDetection(int32_km inInstrumentNo, CMMISDK_OnOff* outDetection);
	error_km KMAPI CMMISDK_SetMeasurementMode(int32_km inInstrumentNo, CMMISDK_MeasMode inMode);
	error_km KMAPI CMMISDK_GetMeasurementMode(int32_km inInstrumentNo, CMMISDK_MeasMode* outMode);
	error_km KMAPI CMMISDK_SetSpecularComponent(int32_km inInstrumentNo, CMMISDK_SpecularComponent inSpecularComponent);
	error_km KMAPI CMMISDK_GetSpecularComponent(int32_km inInstrumentNo, CMMISDK_SpecularComponent* outSpecularComponent);
	error_km KMAPI CMMISDK_SetUv(int32_km inInstrumentNo, CMMISDK_Uv inUv);
	error_km KMAPI CMMISDK_GetUv(int32_km inInstrumentNo, CMMISDK_Uv* outUv);
	error_km KMAPI CMMISDK_SetAutoAverageTimes(int32_km inInstrumentNo, int32_km inTimes);
	error_km KMAPI CMMISDK_GetAutoAverageTimes(int32_km inInstrumentNo, int32_km* outTimes);
	error_km KMAPI CMMISDK_SetManualAverageTimes(int32_km inInstrumentNo, int32_km inTimes);
	error_km KMAPI CMMISDK_GetManualAverageTimes(int32_km inInstrumentNo, int32_km* outTimes);
	error_km KMAPI CMMISDK_SetManualAverageSaveMode(int32_km inInstrumentNo, CMMISDK_SaveMode inMode);
	error_km KMAPI CMMISDK_GetManualAverageSaveMode(int32_km inInstrumentNo, CMMISDK_SaveMode* outMode);
	error_km KMAPI CMMISDK_SetCondSMC(int32_km inInstrumentNo, const CMMISDK_CondSMC* inCond);
	error_km KMAPI CMMISDK_GetCondSMC(int32_km inInstrumentNo, CMMISDK_CondSMC* outCond);
	error_km KMAPI CMMISDK_SetDisplayType(int32_km inInstrumentNo, CMMISDK_DisplayType inDisplayType);
	error_km KMAPI CMMISDK_GetDisplayType(int32_km inInstrumentNo, CMMISDK_DisplayType* outDisplayType);
	error_km KMAPI CMMISDK_SetObserverAndIlluminant(int32_km inInstrumentNo, int32_km inNum, CMMISDK_Observer inObs, CMMISDK_Illuminant inIll);
	error_km KMAPI CMMISDK_GetObserverAndIlluminant(int32_km inInstrumentNo, int32_km inNum, CMMISDK_Observer* outObs, CMMISDK_Illuminant* outIll);
	error_km KMAPI CMMISDK_SetUserIlluminant(int32_km inInstrumentNo, const CMMISDK_UserIlluminant* inIllData);
	error_km KMAPI CMMISDK_GetUserIlluminant(int32_km inInstrumentNo, CMMISDK_UserIlluminant* outIllData);
	error_km KMAPI CMMISDK_SetColorSpace(int32_km inInstrumentNo, CMMISDK_ColorSpace inColorSpace);
	error_km KMAPI CMMISDK_GetColorSpace(int32_km inInstrumentNo, CMMISDK_ColorSpace* outColorSpace);
	error_km KMAPI CMMISDK_SetEquation(int32_km inInstrumentNo, CMMISDK_Equation inEquation);
	error_km KMAPI CMMISDK_GetEquation(int32_km inInstrumentNo, CMMISDK_Equation* outEquation);
	error_km KMAPI CMMISDK_SetCustomIndex(int32_km inInstrumentNo, int32_km inCustomNum, CMMISDK_CustomIndex inCustomIndex);
	error_km KMAPI CMMISDK_GetCustomIndex(int32_km inInstrumentNo, int32_km inCustomNum, CMMISDK_CustomIndex* outCustomIndex);
	error_km KMAPI CMMISDK_SetDirection(int32_km inInstrumentNo, CMMISDK_Direction inDirection);
	error_km KMAPI CMMISDK_GetDirection(int32_km inInstrumentNo, CMMISDK_Direction* outDirection);
	error_km KMAPI CMMISDK_SetUserEquation(int32_km inInstrumentNo, int32_km inNum, const CMMISDK_UserEquation* inEquation);
	error_km KMAPI CMMISDK_GetUserEquation(int32_km inInstrumentNo, int32_km inNum, CMMISDK_UserEquation* outEquation);
	error_km KMAPI CMMISDK_SetActiveTarget(int32_km inInstrumentNo, int32_km inNum);
	error_km KMAPI CMMISDK_GetActiveTarget(int32_km inInstrumentNo, int32_km* outNum);
	error_km KMAPI CMMISDK_GetSavedTargetList(int32_km inInstrumentNo, CMMISDK_SavedTargetList* outList);
	error_km KMAPI CMMISDK_GetTargetListInFilter(int32_km inInstrumentNo, CMMISDK_SavedTargetList* outList);
	error_km KMAPI CMMISDK_DeleteTargetData(int32_km inInstrumentNo, int32_km inNum);
	error_km KMAPI CMMISDK_DeleteAllTargetData(int32_km inInstrumentNo);
	error_km KMAPI CMMISDK_ClearTargetInfo(int32_km inInstrumentNo);
	error_km KMAPI CMMISDK_LoadTargetInfo(int32_km inInstrumentNo, int32_km inNum);
	error_km KMAPI CMMISDK_SaveTargetInfo(int32_km inInstrumentNo, int32_km inNum);
	error_km KMAPI CMMISDK_SetTargetProperty(int32_km inInstrumentNo, const CMMISDK_TargetProperty* inProperty);
	error_km KMAPI CMMISDK_GetTargetProperty(int32_km inInstrumentNo, CMMISDK_TargetProperty* outProperty);
	error_km KMAPI CMMISDK_SetTargetData(int32_km inInstrumentNo, CMMISDK_DataType inDataType, const CMMISDK_Data* inData);