SDK/CMMISDK_Parameters.h

//Display type
typedef int32_km CMMISDK_DisplayType;
//Measurement data
struct CMMISDK_Data
{
	float64_km   data[SIZE_DATA];	//Data
};
//Index data for fluorescence adjustment
struct CMMISDK_UvAdjustIndex
{
	float64_km   value;				//value
	float64_km   tolerance;			//Allowable width
};


//Fluorescence adjustment coefficient
struct CMMISDK_UvAdjustCoef
{
	float64_km   coefficient[SIZE_DATA];	//Fluorescence coefficient
	float64_km   correction[SIZE_DATA];		//Fluorescence correction value
	float64_km   param[SIZE_GG_PARAM];		//Parameter
											//* In the case of Ganz & Griesser only, it is stored in the order of P · Q · C · m · n · k · dWdS
	int32_km     date[SIZE_DATE];			//Adjustment date
											//The array is stored in the order of year, month, day, hour, minute, second
};


//Ganz & Griesser fluorescence adjustment data
struct CMMISDK_UvAdjustGG
{
	int32_km     count;				//Number of samples used
	float64_km   WI[SIZE_GG];		//WI value for the number of samples used
	float64_km   Tint[SIZE_GG];		//Tint value for the number of samples used
};


//SMC conditions
struct CMMISDK_CondSMC
{
	CMMISDK_OnOff			enable;		//Enable or disable function
	float64_km				threshold;	//Threshold value level (0.01 to 9.99)
	int32_km				times;		//Number of times to average (3 to 10 times)
};


//User illuminant data
struct CMMISDK_UserIlluminant
{
	float64_km	data[SIZE_USER_ILLUMINANT];		//User illuminant data
												//	85 items of data between 360 to 780 nm at 5-nm pitch
	char		name[SIZE_USER_ILL_NAME];		//User illuminant name
												//	Name to be displayed on the menu. If the character length is 0, it will be "User".
};
//Saved target list
struct CMMISDK_SavedTargetList
{
	int32_km   size;				//Number of saved targets
	int32_km   list[SIZE_TARGET];	//List of saved numbers
									//	*Stores the target numbers in the amount of the size variable.
};
//Target properties
struct CMMISDK_TargetProperty
{
	int32_km                   date[SIZE_DATE];			//Measurement (registration) date/time
														//	Values are stored in the array in year/month/day/hours/minutes/seconds order.
	int32_km                   group_list[SIZE_GROUP];	//Group number list
	CMMISDK_MeasType           meas_type;				//Measurement method
	CMMISDK_MeasMode           meas_mode;				//Measurement mode
	CMMISDK_MeasArea           meas_area;				//Measurement area
	CMMISDK_MeasAngle          meas_angle;				//Measurement angle
	CMMISDK_LightDirection     meas_ldirection;			//Irradiation direction
	CMMISDK_SpecularComponent  meas_scie;				//Specular component
	CMMISDK_Uv                 meas_uv;					//UV condition
	int32_km                   warning_level;			//Warning level
	CMMISDK_Warning            warning;					//Warning information
														//	0x01	Voltage drop 
														//	0x02	Calibration recommended
														//	0x04	Xe lamp deterioration
														//	0x08	LED lamp deterioration
														//	0x10	Reflectance outside of measurable range
														//	0x20	Gloss outside of measurable range
	int32_km                   diagnosis;				//Diagnosis information
														//	0x01	Repeatability Status: Red
														//	0x02	Repeatability Status: Yellow
														//	0x04	Reproducibility Status: Red
														//	0x08	Reproducibility Status: Yellow
														//	0x10	Intensity Status: Red
														//	0x20	Intensity Status: Yellow
	CMMISDK_DataAttr           data_attr;				//Data attribute
	char                       name[SIZE_DATANAME];		//Data name
														//	*The size is 64 bytes, but the character length depends on the instrument capabilities.
};
//User equation information
struct CMMISDK_UserEquation
{
	char   formula[SIZE_USER_EQUATION];		//User equation
	char   user_class[SIZE_USER_EQUATION];	//User classes
};