SampleApp_25cG_CS_C/SampleApp/SDK/CMMISDK_API.cs

		[DllImport("CMMISDK_x64.dll")]
		extern public static Int32 CMMISDK_SetTintForUvAdjust(Int32 inInstrumentNo, ref CMMISDK_UvAdjustIndex inData);
		[DllImport("CMMISDK_x64.dll")]
		extern public static Int32 CMMISDK_GetTintForUvAdjust(Int32 inInstrumentNo, ref CMMISDK_UvAdjustIndex outData);
		[DllImport("CMMISDK_x64.dll")]
		extern public static Int32 CMMISDK_SetIsoBrightnessForUvAdjust(Int32 inInstrumentNo, ref CMMISDK_UvAdjustIndex inData);
		[DllImport("CMMISDK_x64.dll")]
		extern public static Int32 CMMISDK_GetIsoBrightnessForUvAdjust(Int32 inInstrumentNo, ref CMMISDK_UvAdjustIndex outData);
        [DllImport("CMMISDK_x64.dll")]
		extern public static Int32 CMMISDK_SetGanzForUvAdjust(Int32 inInstrumentNo, ref CMMISDK_UvAdjustGG inData);
		[DllImport("CMMISDK_x64.dll")]
		extern public static Int32 CMMISDK_GetGanzForUvAdjust(Int32 inInstrumentNo, ref CMMISDK_UvAdjustGG outData);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetEachProfileForUvAdjust(Int32 inInstrumentNo, CMMISDK_UvAdjustDataType inType, ref CMMISDK_Data inData);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetEachProfileForUvAdjust(Int32 inInstrumentNo, CMMISDK_UvAdjustDataType inType, ref CMMISDK_Data outData);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetEachWiForUvAdjust(Int32 inInstrumentNo, CMMISDK_UvAdjustDataType inType, ref CMMISDK_UvAdjustIndex inData);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetEachWiForUvAdjust(Int32 inInstrumentNo, CMMISDK_UvAdjustDataType inType, ref CMMISDK_UvAdjustIndex outData);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetEachTintForUvAdjust(Int32 inInstrumentNo, CMMISDK_UvAdjustDataType inType, ref CMMISDK_UvAdjustIndex inData);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetEachTintForUvAdjust(Int32 inInstrumentNo, CMMISDK_UvAdjustDataType inType, ref CMMISDK_UvAdjustIndex outData);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetEachIsoBrightnessForUvAdjust(Int32 inInstrumentNo, CMMISDK_UvAdjustDataType inType, ref CMMISDK_UvAdjustIndex inData);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetEachIsoBrightnessForUvAdjust(Int32 inInstrumentNo, CMMISDK_UvAdjustDataType inType, ref CMMISDK_UvAdjustIndex outData);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetEachGanzForUvAdjust(Int32 inInstrumentNo, CMMISDK_UvAdjustDataType inType, ref CMMISDK_UvAdjustGG inData);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetEachGanzForUvAdjust(Int32 inInstrumentNo, CMMISDK_UvAdjustDataType inType, ref CMMISDK_UvAdjustGG outData);
        [DllImport("CMMISDK_x64.dll")]
		extern public static Int32 CMMISDK_SetDataForUvAdjust(Int32 inInstrumentNo, CMMISDK_UvAdjustDataType inType, Int32 inNum, ref CMMISDK_Data inFull, ref CMMISDK_Data inCut);
        [DllImport("CMMISDK_x64.dll")]
		extern public static Int32 CMMISDK_GetDataForUvAdjust(Int32 inInstrumentNo, CMMISDK_UvAdjustDataType inType, Int32 inNum, ref CMMISDK_Data outFull, ref CMMISDK_Data outCut);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_PerformUvAdjust(Int32 inInstrumentNo, CMMISDK_CondUvAdjust inCond);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_PerformUvAdjustUsingData(Int32 inInstrumentNo, CMMISDK_CondUvAdjust inCond);
        [DllImport("CMMISDK_x64.dll")]
		extern public static Int32 CMMISDK_ClearCoefForUvAdjust(Int32 inInstrumentNo);
		[DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetCoefForUvAdjust(Int32 inInstrumentNo, CMMISDK_MeasArea inArea, CMMISDK_UvAdjustDataType inType, CMMISDK_CondUvAdjust inCond, ref CMMISDK_UvAdjustCoef inCoef);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetCoefForUvAdjust(Int32 inInstrumentNo, CMMISDK_MeasArea inArea, CMMISDK_UvAdjustDataType inType, ref CMMISDK_CondUvAdjust outCond, ref CMMISDK_UvAdjustCoef outCoef);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetMeasurementArea(Int32 inInstrumentNo, CMMISDK_MeasArea inArea);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetMeasurementArea(Int32 inInstrumentNo, ref CMMISDK_MeasArea outArea);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetMeasurementType(Int32 inInstrumentNo, CMMISDK_MeasType inType);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetMeasurementType(Int32 inInstrumentNo, ref CMMISDK_MeasType outType);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetMeasurementAngle(Int32 inInstrumentNo, CMMISDK_MeasAngle inAngle);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetMeasurementAngle(Int32 inInstrumentNo, ref CMMISDK_MeasAngle outAngle);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetTiltDetection(Int32 inInstrumentNo, CMMISDK_OnOff inDetection);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetTiltDetection(Int32 inInstrumentNo, ref CMMISDK_OnOff outDetection);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetMeasurementMode(Int32 inInstrumentNo, CMMISDK_MeasMode inMode);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetMeasurementMode(Int32 inInstrumentNo, ref CMMISDK_MeasMode outMode);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetSpecularComponent(Int32 inInstrumentNo, CMMISDK_SpecularComponent inSpecularComponent);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetSpecularComponent(Int32 inInstrumentNo, ref CMMISDK_SpecularComponent outSpecularComponent);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetUv(Int32 inInstrumentNo, CMMISDK_Uv inUv);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetUv(Int32 inInstrumentNo, ref CMMISDK_Uv outUv);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetAutoAverageTimes(Int32 inInstrumentNo, Int32 inTimes);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetAutoAverageTimes(Int32 inInstrumentNo, ref Int32 outTimes);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetManualAverageTimes(Int32 inInstrumentNo, Int32 inTimes);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetManualAverageTimes(Int32 inInstrumentNo, ref Int32 outTimes);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetManualAverageSaveMode(Int32 inInstrumentNo, CMMISDK_SaveMode inMode);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetManualAverageSaveMode(Int32 inInstrumentNo, ref CMMISDK_SaveMode outMode);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetCondSMC(Int32 inInstrumentNo, ref CMMISDK_CondSMC inCond);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetCondSMC(Int32 inInstrumentNo, ref CMMISDK_CondSMC outCond);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetDisplayType(Int32 inInstrumentNo, CMMISDK_DisplayType inDisplayType);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetDisplayType(Int32 inInstrumentNo, ref CMMISDK_DisplayType outDisplayType);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetObserverAndIlluminant(Int32 inInstrumentNo, Int32 inNum, CMMISDK_Observer inObs, CMMISDK_Illuminant inIll);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetObserverAndIlluminant(Int32 inInstrumentNo, Int32 inNum, ref CMMISDK_Observer outObs, ref CMMISDK_Illuminant outIll);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetUserIlluminant(Int32 inInstrumentNo, ref CMMISDK_UserIlluminant inIllData);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetUserIlluminant(Int32 inInstrumentNo, ref CMMISDK_UserIlluminant outIllData);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetColorSpace(Int32 inInstrumentNo, CMMISDK_ColorSpace inColorSpace);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetColorSpace(Int32 inInstrumentNo, ref CMMISDK_ColorSpace outColorSpace);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetEquation(Int32 inInstrumentNo, CMMISDK_Equation inEquation);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetEquation(Int32 inInstrumentNo, ref CMMISDK_Equation outEquation);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetCustomIndex(Int32 inInstrumentNo, Int32 inCustomNum, CMMISDK_CustomIndex inCustomIndex);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetCustomIndex(Int32 inInstrumentNo, Int32 inCustomNum, ref CMMISDK_CustomIndex outCustomIndex);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetDirection(Int32 inInstrumentNo, CMMISDK_Direction inDirection);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetDirection(Int32 inInstrumentNo, ref CMMISDK_Direction outDirection);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetUserEquation(Int32 inInstrumentNo, Int32 inNum, ref CMMISDK_UserEquation inEquation);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetUserEquation(Int32 inInstrumentNo, Int32 inNum, ref CMMISDK_UserEquation outEquation);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetActiveTarget(Int32 inInstrumentNo, Int32 inNum);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetActiveTarget(Int32 inInstrumentNo, ref Int32 outNum);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetSavedTargetList(Int32 inInstrumentNo, ref CMMISDK_SavedTargetList outList);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetTargetListInFilter(Int32 inInstrumentNo, ref CMMISDK_SavedTargetList outList);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_DeleteTargetData(Int32 inInstrumentNo, Int32 inNum);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_DeleteAllTargetData(Int32 inInstrumentNo);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_ClearTargetInfo(Int32 inInstrumentNo);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_LoadTargetInfo(Int32 inInstrumentNo, Int32 inNum);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SaveTargetInfo(Int32 inInstrumentNo, Int32 inNum);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetTargetProperty(Int32 inInstrumentNo, ref CMMISDK_TargetProperty inProperty);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_GetTargetProperty(Int32 inInstrumentNo, ref CMMISDK_TargetProperty outProperty);
        [DllImport("CMMISDK_x64.dll")]
        extern public static Int32 CMMISDK_SetTargetData(Int32 inInstrumentNo, CMMISDK_DataType inDataType, ref CMMISDK_Data inData);
